- #104    :lastquarter throws exception in first quarter (TI-100)
          (thanks to Andreas Poisel)
- #105    Keeps tracking renamed and stopped task (TI-101)
          (thanks to Antanas B.)
- #111    Some tests fail depending on the time of day
          (thanks to chronitis)
- #113    summary does not display correctly open intervals spanning day border
          (thanks to janikrabe)
- #135    Task at month end not getting displayed
          (thanks to towo)
- #138    Entering an escaped quote in a tag name causes incorrect JSON to be generated
          (thanks to bognolo)
- #139    month 1st responds with "Time tracking cannot be set in the future"
          (thanks to ddombrowsky, triclops200)
- #142    allow setting end of task in future
          (thanks to sclo)
- #157    CLI: Ensure IDs are non-zero
          (thanks to janikrabe)
- #165    CmdSummary does not show empty intervals at midnight
          (thanks to janikrabe)
- #166    getTracked behaves incorrectly when latest interval is empty
          (thanks to janikrabe)
- #167    Cannot shorten interval to zero length
          (thanks to janikrabe)
- #174    Interval is split in two when it encloses month border
- #183    Hyphen in annotation gets padded with spaces
- #189    segfault on timew get dom.active.tag.0
          (thanks to Valodim)
-         Fixed error from totals.py while timer is active
          (thanks to davisdude)
-         Refactoring of Interval and Range

------ current release ---------------------------

1.1.1 (2018-02-03) ef26ebd6fec8472d4b91644806f48b546bb35747

- TI-76   Shortening an interval over an exclusion makes the exclusion no longer apply
          (thanks to A M)
- TI-102  Exclusions stopped working
          (thanks to Christian Decker)

------ old release -------------------------------

1.1.0 (2018-01-13) 836bc41014018ab333e6ea73412ee09d015beb4e

- TD-120  Missing cmakedefine for HAVE_GET_CURRENT_DIR_NAME
          (thanks to Jörg Krause, Ben Boeckel).