@@ -30,6 +30,7 @@ The following submitted code, packages or analysis, and deserve special thanks:
   Aaron Fields
   vedharish
   janikrabe
+  sruffell
 
 Thanks to the following, who submitted detailed bug reports and excellent suggestions:
 
